feat: Use native pg driver for database interaction
Replaced `@vercel/postgres` with the native `pg` library for database operations. This change involves updating dependencies and refactoring database connection logic to use `pg.Pool` for managing connections.

The `api/health.ts` and `api/db.ts` files have been updated to reflect this change. Additionally, error handling in `components/MinePage.tsx` has been improved to provide more specific feedback from server errors. The `pg` types have also been added to dev dependencies.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/pg": "^8.11.0",
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript": "^5.2.2",
