--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@hello-pangea/dnd": "^17.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
